<resources>
    <string name="app_name">Geek Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvOrgHome1">Hackathons are proving grounds for new ideas. They’re especially good tools to stimulate the creative and problem-solving juices of developers.</string>
    <string name="tvOrgHome2">Associating your brand with a hackathon can change the public’s perception of your brand.<br />Help acquire developer mind share.<br />It is an efficient way to deliver more awareness about your company to a prime, target audience –the maker community and increase brand exposure in the tech world.</string>
    <string name="tvOrgHome3">Planning to host your hackathon?<br />Press the button below.<br /><p />BON VOYAGE !! </string>
    <string name="reglinkfromdb">reglinkFromDB</string>
    <string name="register_now">REGISTER NOW!</string>
    <string name="domainfromdb">domainfromDB</string>
    <string name="domain">DOMAIN</string>
    <string name="linkfromdb">linkfromdb</string>
    <string name="tvUser2">The purpose of a hackathon is a for a group of programmers to work together on a collaborative project.<br />Participating in Hackathons will not only improve your network with people in your industry but also add value to your resume or CV. It signals to people that you have programming skills, experience working in intense environments, and know how to win. People know that participating in a hackathon instantly increases your knowledge and skill level.</string>
    <string name="tvUser3">Planning on participating ?<br />To learn more about upcoming hackathons click EVENTS.<br />To find team for hackathon click TEAMS</string>
    <string name="default_string">--</string>
</resources>