<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE6EE"
    tools:context=".organisation.OrgHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="WELCOME TO GEEKSEARCH"
            android:textColor="#CD5E77"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_view_box"
            android:padding="10dp"
            android:text="@string/tvOrgHome1"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="serif" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_view_box"
            android:padding="10dp"
            android:text="@string/tvOrgHome2"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="serif"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_view_box"
            android:padding="10dp"
            android:text="@string/tvOrgHome3"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="serif" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/ohBtAddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#ffbfc3"
            android:drawableLeft="@drawable/ic_round_add_alert_24"
            android:fontFamily="sans-serif-medium"
            android:text="ADD EVENT"
            android:textColor="#CD5E77"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:cornerRadius="18dp" />
    </LinearLayout>
</RelativeLayout>